cmake_minimum_required(VERSION 3.24)
project(Arreglos)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)
add_executable(arreglo1 arreglo1.cpp)
add_executable(arreglo2 arreglo2.cpp)
add_executable(arreglo3 arreglo3.cpp)
add_executable(arreglo4 arreglo4.cpp)
add_executable(arreglo5 arreglo5.cpp)
